[package]
name = "Issuer"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
env_logger = "0.10"
jsonwebtoken = "8.0"
chrono = "0.4"
uuid = { version = "1.0", features = ["v4"] }
serde_json = "1.0.127"
base64 = "0.22.1"
sha2 = "0.10.8"
lazy_static = "1.4.0"
rusqlite = "0.32.1"
thiserror = "2.0.3"
rand = "0.8.5"
